--- a/teethland/config/config.yaml
+++ b/teethland/config/config.yaml
@@ -1,5 +1,5 @@
 work_dir: '/home/mkaailab/Documents/logs/tooth_segmentation'
-version: mixedseg_fold99
+version: binseg_fold1
 seed: 0
 
 model:
@@ -67,6 +67,27 @@ model:
     weight_decay: 0.0001
     epochs: 500
     warmup_epochs: 5
+  
+  binseg:
+    channels_list: [48, 96, 192, 256]
+    depths: [3, 9, 3]
+    heads_list: [6, 12, 24]
+    window_sizes: [0.2, 0.4, 0.8]
+    point_embedding:
+      use: True
+      kpconv_point_influence: 0.02
+      kpconv_ball_radius: 0.05
+    stratified_union: False
+    downsample_ratio: 0.26
+    max_drop_path_prob: 0.3
+    stratified_downsample_ratio: 0.26
+    crpe_bins: 80
+    transformer_lr_ratio: 0.1
+    checkpoint_path: ''
+    lr: 0.0006
+    weight_decay: 0.0001
+    epochs: 100
+    warmup_epochs: 0
 
   proposal_points: 10000
   dbscan_cfg:
@@ -82,11 +103,10 @@ datamodule:
   root: '/mnt/diag/IOS/3dteethseg/full_dataset/lower_upper'
   root: '/home/mkaailab/Documents/IOS/3dteethland/code/input'
   root: '/home/mkaailab/Documents/IOS/Brazil/cases'
-  root: '/home/mkaailab/Documents/IOS/3dteethland/data/unseen'
   landmarks_root: '/home/mkaailab/Documents/IOS/3dteethland/data/3DTeethLand_landmarks_train'
   regex_filter: ''
   extensions: ['ply', 'stl', 'obj']
-  fold: 4
+  fold: 1
   clean: True  # TODO: Set to true for Grand Challenge inference
   val_size: 0.2
   include_val_as_train: false
@@ -101,5 +121,5 @@ datamodule:
     voxel_size: 0.01
     sample_ratio: 0.25
   proposal_points: 10000
-  max_proposals: 16
+  max_proposals: 8
   distinguish_upper_lower: false  # True worse
