--- a/teethland/config/config.yaml
+++ b/teethland/config/config.yaml
@@ -40,7 +40,7 @@ model:
     stratified_downsample_ratio: 0.26
     crpe_bins: 80
     transformer_lr_ratio: 0.1
-    checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/mixedseg_validate/checkpoints/weights-epoch=169.ckpt'
+    checkpoint_path: 'checkpoints/mixedseg_fold4.ckpt'
     lr: 0.0006
     weight_decay: 0.0001
     epochs: 200
@@ -48,6 +48,7 @@ model:
 
   landmarks:
     channels_list: [48, 96, 192, 256]
+    out_channels: [1, 4, 4, 4, 4, 4]
     depths: [3, 9, 3]
     heads_list: [6, 12, 24]
     window_sizes: [0.2, 0.4, 0.8]
@@ -70,6 +71,7 @@ model:
   
   binseg:
     channels_list: [48, 96, 192, 256]
+    out_channels: 1
     depths: [3, 9, 3]
     heads_list: [6, 12, 24]
     window_sizes: [0.2, 0.4, 0.8]
@@ -83,7 +85,7 @@ model:
     stratified_downsample_ratio: 0.26
     crpe_bins: 80
     transformer_lr_ratio: 0.1
-    checkpoint_path: ''
+    checkpoint_path: 'checkpoints/binseg_fold4.ckpt'
     lr: 0.0006
     weight_decay: 0.0001
     epochs: 100
@@ -98,7 +100,7 @@ model:
 accumulate_grad_batches: 1  # 1 better segmentation, worse classification
 gradient_clip_norm: 35  # 10 is worse
 
-out_dir: ''
+out_dir: 'output'
 datamodule:
   root: '/mnt/diag/IOS/3dteethseg/full_dataset/lower_upper'
   root: '/home/mkaailab/Documents/IOS/3dteethland/code/input'
@@ -106,7 +108,7 @@ datamodule:
   landmarks_root: '/home/mkaailab/Documents/IOS/3dteethland/data/3DTeethLand_landmarks_train'
   regex_filter: ''
   extensions: ['ply', 'stl', 'obj']
-  fold: 1
+  fold: 4
   clean: True  # TODO: Set to true for Grand Challenge inference
   val_size: 0.2
   include_val_as_train: false
