--- a/teethland/config/config.yaml
+++ b/teethland/config/config.yaml
@@ -1,5 +1,5 @@
 work_dir: '/home/mkaailab/Documents/logs/tooth_segmentation'
-version: 3dteethseg_train_original
+version: 3dteethseg_binseg_centroidshift
 seed: 0
 
 model:
@@ -18,7 +18,7 @@ model:
     stratified_downsample_ratio: 0.26
     crpe_bins: 80
     transformer_lr_ratio: 0.1
-    checkpoint_path: 'checkpoints/instseg_full.ckpt'
+    checkpoint_path: 'checkpoints/instseg_train_addenda.ckpt'
     # checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/mixedseg_validate/checkpoints/weights-epoch=164.ckpt'
     lr: 0.0006
     weight_decay: 0.0001
@@ -74,11 +74,11 @@ model:
     out_channels: 1
     depths: [3, 9, 3]
     heads_list: [6, 12, 24]
-    window_sizes: [0.2, 0.4, 0.8]
+    window_sizes: [0.1, 0.2, 0.4]
     point_embedding:
       use: True
-      kpconv_point_influence: 0.02
-      kpconv_ball_radius: 0.05
+      kpconv_point_influence: 0.015
+      kpconv_ball_radius: 0.03
     stratified_union: False
     downsample_ratio: 0.26
     max_drop_path_prob: 0.3
@@ -86,12 +86,13 @@ model:
     crpe_bins: 80
     transformer_lr_ratio: 0.1
     checkpoint_path: 'checkpoints/binseg_fold4.ckpt'
+    checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/3dteethseg_binseg_centroidshift/checkpoints/weights-epoch=111.ckpt'
     lr: 0.0006
     weight_decay: 0.0001
-    epochs: 100
-    warmup_epochs: 0
+    epochs: 250
+    warmup_epochs: 5
 
-  proposal_points: 10000
+  proposal_points: 12000
   dbscan_cfg:
     max_neighbor_dist: 0.03
     min_points: 40  # [30, 50]
@@ -100,19 +101,20 @@ model:
 accumulate_grad_batches: 1  # 1 better segmentation, worse classification
 gradient_clip_norm: 35  # 10 is worse
 
-out_dir: 'preds'
+out_dir: '3dteethseg'
 datamodule:
   root: '/mnt/diag/IOS/3dteethseg/full_dataset/lower_upper'
   root: '/home/mkaailab/Documents/IOS/3dteethland/code/input'
   root: '/home/mkaailab/Documents/IOS/Brazil/cases'
-  # root: '/mnt/diag/IOS/3dteethseg/challenge_dataset
+  # root: '/mnt/diag/IOS/3dteethseg/full_dataset/test'
+  root: '/mnt/diag/IOS/3dteethseg/challenge_dataset'
   landmarks_root: '/home/mkaailab/Documents/IOS/3dteethland/data/3DTeethLand_landmarks_train'
   regex_filter: ''
   extensions: ['ply', 'stl', 'obj']
   fold: 1
   clean: True  # TODO: Set to true for Grand Challenge inference
-  val_size: 0.2
-  include_val_as_train: false
+  val_size: 0.0
+  include_val_as_train: true
   batch: null  # [0, 100]
   batch_size: 2
   num_workers: 8
