Implement minimum graph-cut to determine foreground points

--- a/teethland/config/config.yaml
+++ b/teethland/config/config.yaml
@@ -1,5 +1,5 @@
 work_dir: '/home/mkaailab/Documents/logs/tooth_segmentation'
-version: 3dteethseg_binseg_centroidshift
+version: binseg_fold1
 seed: 0
 
 model:
@@ -86,7 +86,7 @@ model:
     crpe_bins: 80
     transformer_lr_ratio: 0.1
     checkpoint_path: 'checkpoints/binseg_fold4.ckpt'
-    checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/3dteethseg_binseg_centroidshift/checkpoints/weights-epoch=111.ckpt'
+    checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/3dteethseg_binseg_centroidshift/checkpoints/weights-epoch=199.ckpt'
     lr: 0.0006
     weight_decay: 0.0001
     epochs: 250
@@ -106,15 +106,15 @@ datamodule:
   root: '/mnt/diag/IOS/3dteethseg/full_dataset/lower_upper'
   root: '/home/mkaailab/Documents/IOS/3dteethland/code/input'
   root: '/home/mkaailab/Documents/IOS/Brazil/cases'
-  # root: '/mnt/diag/IOS/3dteethseg/full_dataset/test'
-  root: '/mnt/diag/IOS/3dteethseg/challenge_dataset'
+  root: '/mnt/diag/IOS/3dteethseg/full_dataset/failures'
+  # root: '/mnt/diag/IOS/3dteethseg/challenge_dataset'
   landmarks_root: '/home/mkaailab/Documents/IOS/3dteethland/data/3DTeethLand_landmarks_train'
   regex_filter: ''
   extensions: ['ply', 'stl', 'obj']
   fold: 1
   clean: True  # TODO: Set to true for Grand Challenge inference
   val_size: 0.0
-  include_val_as_train: true
+  include_val_as_train: false
   batch: null  # [0, 100]
   batch_size: 2
   num_workers: 8
