--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,21 @@
+Cython==3.0.11
 lxml==5.2.2
 numpy<2.0.0
 opencv-python==4.10.0.84
 open3d==0.17.0
+pygco==0.0.16
 pymeshlab==2023.12.post1
 pytest==8.2.2
 pytorch-lightning==2.3.3
 scikit-multilearn @ git+https://github.com/scikit-multilearn/scikit-multilearn@master
-timm==1.0.7
 tensorboard==2.17.0
-torchtyping==0.1.4
+timm==1.0.7
 --extra-index-url https://download.pytorch.org/whl/cu121
 torch==2.3.0
 --extra-index-url https://download.pytorch.org/whl/cu121
-torchvision
---extra-index-url https://download.pytorch.org/whl/cu121
 torchaudio
+torchtyping==0.1.4
+--extra-index-url https://download.pytorch.org/whl/cu121
+torchvision
 -f https://data.pyg.org/whl/torch-2.3.0+cu121.html
 torch-scatter
