--- a/teethland/config/config.yaml
+++ b/teethland/config/config.yaml
@@ -1,5 +1,5 @@
 work_dir: '/home/mkaailab/Documents/logs/tooth_segmentation'
-version: 3dteethseg
+version: 3dteethseg_ddd
 seed: 0
 
 model:
@@ -39,7 +39,7 @@ model:
     stratified_downsample_ratio: 0.26
     crpe_bins: 80
     transformer_lr_ratio: 0.1
-    checkpoint_path: 'checkpoints/mixedseg_fold0.ckpt'
+    checkpoint_path: 'checkpoints/mixedseg_fold4.ckpt'
     lr: 0.0006
     weight_decay: 0.0001
     epochs: 200
@@ -84,32 +84,39 @@ model:
     stratified_downsample_ratio: 0.26
     crpe_bins: 80
     transformer_lr_ratio: 0.1
-    checkpoint_path: 'checkpoints/binseg_train_addenda.ckpt'
+    # checkpoint_path: 'checkpoints/binseg_train_addenda.ckpt'
+    checkpoint_path: 'checkpoints/binseg_fold4.ckpt'
+    # checkpoint_path: ''
     lr: 0.0006
     weight_decay: 0.0001
     epochs: 250
     warmup_epochs: 5
 
-  proposal_points: 12000
+  proposal_points: 10000
   dbscan_cfg:
     max_neighbor_dist: 0.03
     min_points: 40  # [30, 50]
     weighted: True
+  tta: True
+  standardize: False
+  stage2_iters: 2
+  post_process: True
 
 accumulate_grad_batches: 1  # 1 better segmentation, worse classification
 gradient_clip_norm: 35  # 10 is worse
 
-out_dir: '3dteethseg'
+out_dir: 'preds'
 datamodule:
   root: '/mnt/diag/IOS/3dteethseg/full_dataset/lower_upper'
   root: '/home/mkaailab/Documents/IOS/3dteethland/code/input'
-  root: '/home/mkaailab/Documents/IOS/Brazil/cases'
-  root: '/mnt/diag/IOS/3dteethseg/full_dataset/test'
+  # root: '/home/mkaailab/Documents/IOS/Brazil/cases'
+  root: '/mnt/diag/IOS/3dteethseg/full_dataset/failures'
   # root: '/mnt/diag/IOS/3dteethseg/challenge_dataset'
   landmarks_root: '/home/mkaailab/Documents/IOS/3dteethland/data/3DTeethLand_landmarks_train'
   regex_filter: ''
   extensions: ['ply', 'stl', 'obj']
   fold: 4
+  # fold: 'fold_4.txt'
   clean: True  # TODO: Set to true for Grand Challenge inference
   val_size: 0.0
   include_val_as_train: false
