--- a/teethland/config/config.yaml
+++ b/teethland/config/config.yaml
@@ -1,5 +1,5 @@
 work_dir: '/home/mkaailab/Documents/logs/tooth_segmentation'
-version: 3dteethseg_ddd
+version: 3dteethseg_ablation_inst
 seed: 0
 
 model:
@@ -19,6 +19,7 @@ model:
     crpe_bins: 80
     transformer_lr_ratio: 0.1
     checkpoint_path: 'checkpoints/instseg_train_addenda.ckpt'
+    # checkpoint_path: 'checkpoints/instseg_full.ckpt'
     lr: 0.0006
     weight_decay: 0.0001
     epochs: 500
@@ -50,7 +51,7 @@ model:
     out_channels: [1, 4, 4, 4, 4, 4]
     depths: [3, 9, 3]
     heads_list: [6, 12, 24]
-    window_sizes: [0.2, 0.4, 0.8]
+    window_sizes: [0.1, 0.2, 0.4]
     point_embedding:
       use: True
       kpconv_point_influence: 0.02
@@ -61,8 +62,7 @@ model:
     stratified_downsample_ratio: 0.26
     crpe_bins: 80
     transformer_lr_ratio: 0.1
-    # checkpoint_path: 'checkpoints/landmarks.ckpt'
-    checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/landmarks_full/checkpoints/weights-epoch=499.ckpt'
+    checkpoint_path: 'checkpoints/landmarks_full.ckpt'
     lr: 0.0006
     weight_decay: 0.0001
     epochs: 500
@@ -84,8 +84,8 @@ model:
     stratified_downsample_ratio: 0.26
     crpe_bins: 80
     transformer_lr_ratio: 0.1
-    # checkpoint_path: 'checkpoints/binseg_train_addenda.ckpt'
-    checkpoint_path: 'checkpoints/binseg_fold4.ckpt'
+    checkpoint_path: 'checkpoints/binseg_train_addenda.ckpt'
+    # checkpoint_path: 'checkpoints/binseg_fold4.ckpt'
     # checkpoint_path: ''
     lr: 0.0006
     weight_decay: 0.0001
@@ -105,26 +105,28 @@ model:
 accumulate_grad_batches: 1  # 1 better segmentation, worse classification
 gradient_clip_norm: 35  # 10 is worse
 
-out_dir: 'preds'
+out_dir: ''
 datamodule:
   root: '/mnt/diag/IOS/3dteethseg/full_dataset/lower_upper'
-  root: '/home/mkaailab/Documents/IOS/3dteethland/code/input'
-  # root: '/home/mkaailab/Documents/IOS/Brazil/cases'
-  root: '/mnt/diag/IOS/3dteethseg/full_dataset/failures'
+  # root: '/home/mkaailab/Documents/IOS/3dteethland/code/input'
+  # root: '/home/mkaailab/Documents/CBCT/fusion/complete_cadavers/IOS scans'
+  # root: '/home/mkaailab/Documents/IOS/partials/root_full_part5'
+  # root: '/mnt/diag/IOS/3dteethseg/full_dataset/failures'
   # root: '/mnt/diag/IOS/3dteethseg/challenge_dataset'
   landmarks_root: '/home/mkaailab/Documents/IOS/3dteethland/data/3DTeethLand_landmarks_train'
   regex_filter: ''
   extensions: ['ply', 'stl', 'obj']
-  fold: 4
-  # fold: 'fold_4.txt'
+  # fold: 0
+  fold: 'fold_0.txt'
   clean: True  # TODO: Set to true for Grand Challenge inference
-  val_size: 0.0
+  val_size: 0.2
   include_val_as_train: false
+  sampler: 'default'  # 'default' or 'balanced'
   batch: null  # [0, 100]
   batch_size: 2
-  num_workers: 8
+  num_workers: 4
   pin_memory: True
-  persistent_workers: False
+  persistent_workers: True
   uniform_density_voxel_size: [0.025, 0.01]  # instseg, landmarks
   boundary_aware:
     use: False
