--- a/teethland/config/config.yaml
+++ b/teethland/config/config.yaml
@@ -1,8 +1,31 @@
 work_dir: '/home/mkaailab/Documents/logs/tooth_segmentation'
-version: 3dteethseg_ablation_inst
+version: china_align_planes_partial_seg
 seed: 0
 
 model:
+  align:
+    channels_list: [48, 96, 192, 256]
+    depths: [3, 9, 3]
+    heads_list: [6, 12, 24]
+    window_sizes: [0.4, 0.8, 1.6]
+    point_embedding:
+      use: True
+      kpconv_point_influence: 0.04
+      kpconv_ball_radius: 0.1
+    stratified_union: False
+    downsample_ratio: 0.26
+    max_drop_path_prob: 0.3
+    stratified_downsample_ratio: 0.26
+    crpe_bins: 80
+    transformer_lr_ratio: 0.1
+    # checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/china_align_e1000/checkpoints/weights-epoch=999.ckpt'
+    checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/china_align_planes_partial_seg/checkpoints/weights-epoch=955.ckpt'
+    lr: 0.001
+    weight_decay: 0.0001
+    epochs: 1000
+    warmup_epochs: 5
+    do_seg: True
+
   instseg:
     channels_list: [48, 96, 192, 256]
     depths: [3, 9, 3]
@@ -20,6 +43,8 @@ model:
     transformer_lr_ratio: 0.1
     checkpoint_path: 'checkpoints/instseg_train_addenda.ckpt'
     # checkpoint_path: 'checkpoints/instseg_full.ckpt'
+    # checkpoint_path: 'checkpoints/instseg_ablation.ckpt'
+    checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/china_instseg_default/checkpoints/weights-epoch=499.ckpt'
     lr: 0.0006
     weight_decay: 0.0001
     epochs: 500
@@ -63,6 +88,7 @@ model:
     crpe_bins: 80
     transformer_lr_ratio: 0.1
     checkpoint_path: 'checkpoints/landmarks_full.ckpt'
+    checkpoint_path: 'checkpoints/landmarks_ablation.ckpt'
     lr: 0.0006
     weight_decay: 0.0001
     epochs: 500
@@ -96,8 +122,9 @@ model:
   dbscan_cfg:
     max_neighbor_dist: 0.03
     min_points: 40  # [30, 50]
-    weighted: True
-  tta: True
+    weighted_cluster: True
+    weighted_average: True
+  tta: False
   standardize: False
   stage2_iters: 2
   post_process: True
@@ -105,25 +132,31 @@ model:
 accumulate_grad_batches: 1  # 1 better segmentation, worse classification
 gradient_clip_norm: 35  # 10 is worse
 
-out_dir: ''
+out_dir: '/home/mkaailab/Documents/IOS/partials/full_dataset/align_partial'
+# out_dir: ''
 datamodule:
   root: '/mnt/diag/IOS/3dteethseg/full_dataset/lower_upper'
   # root: '/home/mkaailab/Documents/IOS/3dteethland/code/input'
-  # root: '/home/mkaailab/Documents/CBCT/fusion/complete_cadavers/IOS scans'
+  # root: '/home/mkaailab/Documents/CBCT/fusion/IOS arches'
   # root: '/home/mkaailab/Documents/IOS/partials/root_full_part5'
   # root: '/mnt/diag/IOS/3dteethseg/full_dataset/failures'
   # root: '/mnt/diag/IOS/3dteethseg/challenge_dataset'
+  # root: '/home/mkaailab/Documents/IOS/Katja Vos/AKMA'
+  # root: '/home/mkaailab/Documents/IOS/Zainab Bousshimad/root'
+  root: '/home/mkaailab/Documents/IOS/partials/full_dataset/root_full'
+  # root: '/home/mkaailab/Documents/IOS/partials/full_dataset/root_partial'
   landmarks_root: '/home/mkaailab/Documents/IOS/3dteethland/data/3DTeethLand_landmarks_train'
   regex_filter: ''
   extensions: ['ply', 'stl', 'obj']
   # fold: 0
-  fold: 'fold_0.txt'
+  fold: 'partials_fold_0.txt'
+  norm: True
   clean: True  # TODO: Set to true for Grand Challenge inference
   val_size: 0.2
   include_val_as_train: false
   sampler: 'default'  # 'default' or 'balanced'
   batch: null  # [0, 100]
-  batch_size: 2
+  batch_size: 8
   num_workers: 4
   pin_memory: True
   persistent_workers: True
@@ -132,6 +165,11 @@ datamodule:
     use: False
     voxel_size: 0.01
     sample_ratio: 0.25
+  align:
+    do_translation: True
+    do_partial: True
   proposal_points: 10000
   max_proposals: 8
+  m3_as_m2: False
+  random_partial: False
   distinguish_upper_lower: false  # True worse
