--- a/teethland/config/config.yaml
+++ b/teethland/config/config.yaml
@@ -1,5 +1,5 @@
 work_dir: '/home/mkaailab/Documents/logs/tooth_segmentation'
-version: china_align_planes_partial_seg
+version: china_instseg_all
 seed: 0
 
 model:
@@ -18,8 +18,7 @@ model:
     stratified_downsample_ratio: 0.26
     crpe_bins: 80
     transformer_lr_ratio: 0.1
-    # checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/china_align_e1000/checkpoints/weights-epoch=999.ckpt'
-    checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/china_align_planes_partial_seg/checkpoints/weights-epoch=955.ckpt'
+    checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/china_align_checked/checkpoints/weights-epoch=999.ckpt'
     lr: 0.001
     weight_decay: 0.0001
     epochs: 1000
@@ -44,10 +43,10 @@ model:
     checkpoint_path: 'checkpoints/instseg_train_addenda.ckpt'
     # checkpoint_path: 'checkpoints/instseg_full.ckpt'
     # checkpoint_path: 'checkpoints/instseg_ablation.ckpt'
-    checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/china_instseg_default/checkpoints/weights-epoch=499.ckpt'
+    checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/china_instseg_partials/checkpoints/weights-epoch=499.ckpt'
     lr: 0.0006
     weight_decay: 0.0001
-    epochs: 500
+    epochs: 600  # overfitting after 600
     warmup_epochs: 5
 
   mixedseg:
@@ -143,20 +142,20 @@ datamodule:
   # root: '/mnt/diag/IOS/3dteethseg/challenge_dataset'
   # root: '/home/mkaailab/Documents/IOS/Katja Vos/AKMA'
   # root: '/home/mkaailab/Documents/IOS/Zainab Bousshimad/root'
-  root: '/home/mkaailab/Documents/IOS/partials/full_dataset/root_full'
+  root: '/home/mkaailab/Documents/IOS/partials/full_dataset'
   # root: '/home/mkaailab/Documents/IOS/partials/full_dataset/root_partial'
   landmarks_root: '/home/mkaailab/Documents/IOS/3dteethland/data/3DTeethLand_landmarks_train'
-  regex_filter: ''
+  regex_filter: 'full'
   extensions: ['ply', 'stl', 'obj']
   # fold: 0
-  fold: 'partials_fold_0.txt'
-  norm: True
-  clean: True  # TODO: Set to true for Grand Challenge inference
+  fold: 'full_fold_0.txt'
+  norm: False
+  clean: False  # TODO: Set to true for Grand Challenge inference
   val_size: 0.2
   include_val_as_train: false
-  sampler: 'default'  # 'default' or 'balanced'
+  sampler: 'balanced'  # 'default' or 'balanced'
   batch: null  # [0, 100]
-  batch_size: 8
+  batch_size: 2
   num_workers: 4
   pin_memory: True
   persistent_workers: True
@@ -171,5 +170,6 @@ datamodule:
   proposal_points: 10000
   max_proposals: 8
   m3_as_m2: False
-  random_partial: False
+  distinguish_left_right: true
+  random_partial: True
   distinguish_upper_lower: false  # True worse
