Test test-time augmentation with FDI post-processing and distributions based on ground-truth aligned scans

--- a/teethland/config/config.yaml
+++ b/teethland/config/config.yaml
@@ -1,5 +1,5 @@
 work_dir: '/home/mkaailab/Documents/logs/tooth_segmentation'
-version: test
+version: china_instseg_realpartials
 seed: 0
 
 model:
@@ -43,7 +43,8 @@ model:
     checkpoint_path: 'checkpoints/instseg_train_addenda.ckpt'
     # checkpoint_path: 'checkpoints/instseg_full.ckpt'
     # checkpoint_path: 'checkpoints/instseg_ablation.ckpt'
-    checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/china_instseg_all/checkpoints/weights-epoch=599.ckpt'
+    checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/china_instseg_nofdiloss/checkpoints/weights-epoch=599.ckpt'
+    # checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/china_instseg_real_partials_nofdiloss/checkpoints/weights-epoch=599.ckpt'
     lr: 0.0006
     weight_decay: 0.0001
     epochs: 600  # overfitting after 600
@@ -113,6 +114,7 @@ model:
     # checkpoint_path: 'checkpoints/binseg_fold4.ckpt'
     # checkpoint_path: ''
     checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/china_binseg_all/checkpoints/weights-epoch=249.ckpt'
+    # checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/china_binseg_realpartials/checkpoints/weights-epoch=249.ckpt'
     lr: 0.0006
     weight_decay: 0.0001
     epochs: 250
@@ -124,15 +126,17 @@ model:
     min_points: 40  # [30, 50]
     weighted_cluster: True
     weighted_average: True
-  tta: False
+  do_align: True
+  tta: True
   standardize: False
   stage2_iters: 2
-  post_process: True
+  post_process_seg: True
+  post_process_labels: True
 
 accumulate_grad_batches: 1  # 1 better segmentation, worse classification
 gradient_clip_norm: 35  # 10 is worse
 
-out_dir: '/home/mkaailab/Documents/IOS/partials/full_dataset/result_partial'
+out_dir: '/home/mkaailab/Documents/IOS/partials/full_dataset/align_full'
 # out_dir: ''
 datamodule:
   root: '/mnt/diag/IOS/3dteethseg/full_dataset/lower_upper'
@@ -143,10 +147,10 @@ datamodule:
   # root: '/mnt/diag/IOS/3dteethseg/challenge_dataset'
   # root: '/home/mkaailab/Documents/IOS/Katja Vos/AKMA'
   # root: '/home/mkaailab/Documents/IOS/Zainab Bousshimad/root'
-  root: '/home/mkaailab/Documents/IOS/partials/full_dataset/root_partial'
+  root: '/home/mkaailab/Documents/IOS/partials/full_dataset/complete_full'
   # root: '/home/mkaailab/Documents/IOS/partials/full_dataset/root_partial'
   landmarks_root: '/home/mkaailab/Documents/IOS/3dteethland/data/3DTeethLand_landmarks_train'
-  regex_filter: '2022109_'
+  regex_filter: ''
   extensions: ['ply', 'stl', 'obj']
   # fold: 0
   fold: 'partial_fold_0.txt'
