--- a/teethland/config/config.yaml
+++ b/teethland/config/config.yaml
@@ -1,5 +1,5 @@
 work_dir: '/home/mkaailab/Documents/logs/tooth_segmentation'
-version: china_instseg_complete_0
+version: 3dteethseg_instseg_all
 seed: 0
 
 model:
@@ -18,8 +18,7 @@ model:
     stratified_downsample_ratio: 0.26
     crpe_bins: 80
     transformer_lr_ratio: 0.1
-    checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/china_align_all_1/checkpoints/weights-epoch=999.ckpt'
-    # checkpoint_path: 'checkpoints/china_align_all.ckpt'
+    checkpoint_path: '/home/mkaailab/Documents/IOS/partials/checkpoints/china_align_all_4.ckpt'
     lr: 0.001
     weight_decay: 0.0001
     epochs: 1000
@@ -41,12 +40,7 @@ model:
     stratified_downsample_ratio: 0.26
     crpe_bins: 80
     transformer_lr_ratio: 0.1
-    checkpoint_path: 'checkpoints/instseg_train_addenda.ckpt'
-    # checkpoint_path: 'checkpoints/instseg_full.ckpt'
-    # checkpoint_path: 'checkpoints/instseg_ablation.ckpt'
-    checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/china_instseg_noalign/checkpoints/weights-epoch=599.ckpt'
-    # checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/china_instseg_real_partials_nofdiloss/checkpoints/weights-epoch=599.ckpt'
-    checkpoint_path: 'checkpoints/china_instseg_complete.ckpt'
+    checkpoint_path: '/home/mkaailab/Documents/IOS/partials/checkpoints/china_instseg_complete_4.ckpt'
     lr: 0.0006
     weight_decay: 0.0001
     epochs: 600  # overfitting after 600
@@ -112,12 +106,7 @@ model:
     stratified_downsample_ratio: 0.26
     crpe_bins: 80
     transformer_lr_ratio: 0.1
-    checkpoint_path: 'checkpoints/binseg_train_addenda.ckpt'
-    # checkpoint_path: 'checkpoints/binseg_fold4.ckpt'
-    # checkpoint_path: ''
-    checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/china_binseg_noalign/checkpoints/weights-epoch=249.ckpt'
-    # checkpoint_path: '/home/mkaailab/Documents/logs/tooth_segmentation/china_binseg_realpartials/checkpoints/weights-epoch=249.ckpt'
-    checkpoint_path: 'checkpoints/china_binseg_complete.ckpt'
+    checkpoint_path: '/home/mkaailab/Documents/IOS/partials/checkpoints/china_binseg_complete_4.ckpt'
     lr: 0.0006
     weight_decay: 0.0001
     epochs: 250
@@ -139,7 +128,7 @@ model:
 accumulate_grad_batches: 1  # 1 better segmentation, worse classification
 gradient_clip_norm: 35  # 10 is worse
 
-out_dir: '/home/mkaailab/Documents/IOS/partials/full_dataset/align_complete_all_1'
+out_dir: '/home/mkaailab/Documents/IOS/partials/full_dataset/result_complete'
 # out_dir: ''
 datamodule:
   root: '/mnt/diag/IOS/3dteethseg/full_dataset/lower_upper'
@@ -150,20 +139,20 @@ datamodule:
   # root: '/mnt/diag/IOS/3dteethseg/challenge_dataset'
   # root: '/home/mkaailab/Documents/IOS/Katja Vos/AKMA'
   # root: '/home/mkaailab/Documents/IOS/Zainab Bousshimad/root'
-  root: '/home/mkaailab/Documents/IOS/partials/full_dataset/align_complete_all_0'
-  # root: '/home/mkaailab/Documents/IOS/partials/full_dataset/root_partial'
+  # root: '/home/mkaailab/Documents/IOS/partials/full_dataset/complete_partial'
+  root: '/mnt/diag/IOS/3dteethseg/challenge_dataset'
   landmarks_root: '/home/mkaailab/Documents/IOS/3dteethland/data/3DTeethLand_landmarks_train'
   regex_filter: ''
   extensions: ['ply', 'stl', 'obj']
   # fold: 0
-  fold: 'complete_fold_0.txt'
+  fold: '3dteethseg_fold_0.txt'
   norm: False
   clean: False  # TODO: Set to true for Grand Challenge inference
   val_size: 0.2
-  include_val_as_train: false
+  include_val_as_train: True
   sampler: 'balanced'  # 'default' or 'balanced'
   batch: null  # [0, 100]
-  batch_size: 2
+  batch_size: 1
   num_workers: 4
   pin_memory: True
   persistent_workers: True
