--- a/teethland/config/config.yaml
+++ b/teethland/config/config.yaml
@@ -1,5 +1,5 @@
 work_dir: '/home/mkaailab/Documents/logs/tooth_segmentation'
-version: 3dteethseg_instseg_all
+version: china_instseg_partialnoalign_0
 seed: 0
 
 model:
@@ -19,6 +19,7 @@ model:
     crpe_bins: 80
     transformer_lr_ratio: 0.1
     checkpoint_path: '/home/mkaailab/Documents/IOS/partials/checkpoints/china_align_all_4.ckpt'
+    checkpoint_path: 'checkpoints/3dteethseg_align_all.ckpt'
     lr: 0.001
     weight_decay: 0.0001
     epochs: 1000
@@ -41,6 +42,7 @@ model:
     crpe_bins: 80
     transformer_lr_ratio: 0.1
     checkpoint_path: '/home/mkaailab/Documents/IOS/partials/checkpoints/china_instseg_complete_4.ckpt'
+    checkpoint_path: 'checkpoints/3dteethseg_instseg_all.ckpt'
     lr: 0.0006
     weight_decay: 0.0001
     epochs: 600  # overfitting after 600
@@ -107,6 +109,7 @@ model:
     crpe_bins: 80
     transformer_lr_ratio: 0.1
     checkpoint_path: '/home/mkaailab/Documents/IOS/partials/checkpoints/china_binseg_complete_4.ckpt'
+    checkpoint_path: 'checkpoints/3dteethseg_binseg_all.ckpt'
     lr: 0.0006
     weight_decay: 0.0001
     epochs: 250
@@ -128,7 +131,7 @@ model:
 accumulate_grad_batches: 1  # 1 better segmentation, worse classification
 gradient_clip_norm: 35  # 10 is worse
 
-out_dir: '/home/mkaailab/Documents/IOS/partials/full_dataset/result_complete'
+out_dir: '/home/mkaailab/Documents/IOS/partials/full_dataset/result_3dteethseg'
 # out_dir: ''
 datamodule:
   root: '/mnt/diag/IOS/3dteethseg/full_dataset/lower_upper'
@@ -139,17 +142,17 @@ datamodule:
   # root: '/mnt/diag/IOS/3dteethseg/challenge_dataset'
   # root: '/home/mkaailab/Documents/IOS/Katja Vos/AKMA'
   # root: '/home/mkaailab/Documents/IOS/Zainab Bousshimad/root'
-  # root: '/home/mkaailab/Documents/IOS/partials/full_dataset/complete_partial'
-  root: '/mnt/diag/IOS/3dteethseg/challenge_dataset'
+  root: '/home/mkaailab/Documents/IOS/partials/full_dataset/complete_full'
+  # root: '/mnt/diag/IOS/3dteethseg/full_dataset/test'
   landmarks_root: '/home/mkaailab/Documents/IOS/3dteethland/data/3DTeethLand_landmarks_train'
   regex_filter: ''
   extensions: ['ply', 'stl', 'obj']
   # fold: 0
-  fold: '3dteethseg_fold_0.txt'
-  norm: False
-  clean: False  # TODO: Set to true for Grand Challenge inference
+  fold: 'full_fold_0.txt'
+  norm: True
+  clean: True  # TODO: Set to true for Grand Challenge inference
   val_size: 0.2
-  include_val_as_train: True
+  include_val_as_train: False
   sampler: 'balanced'  # 'default' or 'balanced'
   batch: null  # [0, 100]
   batch_size: 1
