--- a/teethland/config/config.yaml
+++ b/teethland/config/config.yaml
@@ -1,5 +1,5 @@
 work_dir: '/home/mkaailab/Documents/logs/tooth_segmentation'
-version: china_instseg_partialnoalign_0
+version: infer
 seed: 0
 
 model:
@@ -18,7 +18,7 @@ model:
     stratified_downsample_ratio: 0.26
     crpe_bins: 80
     transformer_lr_ratio: 0.1
-    checkpoint_path: '/home/mkaailab/Documents/IOS/partials/checkpoints/china_align_all_4.ckpt'
+    checkpoint_path: '/home/mkaailab/Documents/IOS/partials/checkpoints/china_align_all_0.ckpt'
     checkpoint_path: 'checkpoints/3dteethseg_align_all.ckpt'
     lr: 0.001
     weight_decay: 0.0001
@@ -41,8 +41,8 @@ model:
     stratified_downsample_ratio: 0.26
     crpe_bins: 80
     transformer_lr_ratio: 0.1
-    checkpoint_path: '/home/mkaailab/Documents/IOS/partials/checkpoints/china_instseg_complete_4.ckpt'
-    checkpoint_path: 'checkpoints/3dteethseg_instseg_all.ckpt'
+    checkpoint_path: '/home/mkaailab/Documents/IOS/partials/checkpoints/china_instseg_partialnoalign_4.ckpt'
+    # checkpoint_path: 'checkpoints/3dteethseg_instseg_all.ckpt'
     lr: 0.0006
     weight_decay: 0.0001
     epochs: 600  # overfitting after 600
@@ -108,8 +108,8 @@ model:
     stratified_downsample_ratio: 0.26
     crpe_bins: 80
     transformer_lr_ratio: 0.1
-    checkpoint_path: '/home/mkaailab/Documents/IOS/partials/checkpoints/china_binseg_complete_4.ckpt'
-    checkpoint_path: 'checkpoints/3dteethseg_binseg_all.ckpt'
+    checkpoint_path: '/home/mkaailab/Documents/IOS/partials/checkpoints/china_binseg_partialnoalign_4.ckpt'
+    # checkpoint_path: 'checkpoints/3dteethseg_binseg_all.ckpt'
     lr: 0.0006
     weight_decay: 0.0001
     epochs: 250
@@ -131,7 +131,7 @@ model:
 accumulate_grad_batches: 1  # 1 better segmentation, worse classification
 gradient_clip_norm: 35  # 10 is worse
 
-out_dir: '/home/mkaailab/Documents/IOS/partials/full_dataset/result_3dteethseg'
+out_dir: '/home/mkaailab/Documents/IOS/partials/full_dataset/result_partialnoalign'
 # out_dir: ''
 datamodule:
   root: '/mnt/diag/IOS/3dteethseg/full_dataset/lower_upper'
@@ -148,14 +148,14 @@ datamodule:
   regex_filter: ''
   extensions: ['ply', 'stl', 'obj']
   # fold: 0
-  fold: 'full_fold_0.txt'
+  fold: 'complete_fold_4.txt'
   norm: True
   clean: True  # TODO: Set to true for Grand Challenge inference
   val_size: 0.2
   include_val_as_train: False
   sampler: 'balanced'  # 'default' or 'balanced'
   batch: null  # [0, 100]
-  batch_size: 1
+  batch_size: 2
   num_workers: 4
   pin_memory: True
   persistent_workers: True
